# result-cpp

./: CMakeLists.txt
include/tim/result/: Result.hpp  expected.hpp
src/: Result.hpp
tests/: assignment.cpp  constructors.cpp  issues.cpp  observers.cpp  relops.cpp  test.cpp
tests/result/: assignment.cpp  bad_result_access.cpp  bases.cpp  constexpr.cpp  constructors.cpp  destructor.cpp  emplace.cpp  extensions.cpp  noexcept.cpp  reference.fail.cpp  relops.cpp  status.cpp  swap.cpp
tests/result/fail/copy/: copy-assign-error-assign.fail.cpp  copy-assign-error-ctor.fail.cpp  copy-assign-value-assign.fail.cpp  copy-assign-value-ctor.fail.cpp  copy-ctor-error.fail.cpp  copy-ctor-value.fail.cpp
tests/result/fail/types/: array-error.fail.cpp  const-volatile-void-error.fail.cpp  function-error.fail.cpp  function.fail.cpp  in_place_error_t.const.fail.cpp  in_place_t.fail.cpp  volatile-void-error.fail.cpp
tests/result/types/: array.fail.cpp  const-void-error.fail.cpp  error-error.fail.cpp  error.fail.cpp  in_place_error_t.const-volatile.fail.cpp  in_place_error_t.fail.cpp  in_place_error_t.volatile.fail.cpp  in_place_t.const.fail.cpp  reference-error.fail.cpp  reference.fail.cpp  void-error.fail.cpp
tests/support/: variant_test_helpers.h
